--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cannon": "github:schteppe/cannon.js",
+    "cannon-es": "^0.20.0",
     "three": "^0.174.0"
   },
   "devDependencies": {
